# switchboard

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  worker.py  wrangler.toml
app/: __init__.py  chat_service.py  commands.py  config.py  conversation_engine.py  d1_storage.py  main.py  model_catalog.py  render.py  richtext.py  router.py  storage.py  telegram_api.py  telegram_app.py  types.py  webhook_app.py
app/providers/: base.py  claude.py  gemini.py  grok.py  openai.py  registry.py
docs/: error-handling.md  overview.md
tests/: __init__.py  test_chat_service.py  test_claude_provider.py  test_config.py  test_gemini_provider.py  test_grok_provider.py  test_main.py  test_openai_provider.py  test_registry.py  test_render.py  test_router.py  test_storage.py  test_telegram_api.py  test_telegram_app.py
